# datadog-lambda-extension

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci-old.yml  .gitlab-ci.yml  .gitleaks.toml  AGENTS.md  LICENSE-3rdparty.csv  README.md  Releasing.md  TODO.md  additional_endpoints.rs  apm_replace_rule.rs  aws.rs  bundling-research.md  env.rs  flush_strategy.rs  log_level.rs  logs_additional_endpoints.rs  mod.rs  processing_rule.rs  runBottlecap.sh  service_mapping.rs  trace_propagation_style.rs  trigger_region.orig.yaml  trigger_region.yaml  yaml.rs
bottlecap/: Cargo.toml  LICENSE-3rdparty.csv  LICENSE-3rdparty.yml  PLAN.md  README.md  bottlecap-main  build.rs  clippy.toml  license-tool.toml
bottlecap/.cargo/: config.toml
bottlecap/docs/plans/: 2026-03-09-datadog-log-agent-adoption-design.md  2026-03-09-datadog-log-agent-adoption-plan.md
bottlecap/src/: appsec_stub.rs  config.rs  fips.rs  http.rs  http_client.rs  lib.rs  lifecycle_handler.rs  logger.rs  logs_handler.rs  main.rs  startup.rs
bottlecap/src/appsec/: README.md  mod.rs  processor.rs
bottlecap/src/appsec/payload/: body.rs  mod.rs  request.rs  response.rs
bottlecap/src/appsec/processor/: .gitattributes  apisec.rs  context.rs  default-recommended-ruleset.json.zst  mod.rs  response.rs  ruleset.rs
bottlecap/src/config/: additional_endpoints.rs  apm_replace_rule.rs  aws.rs  env.rs  env_manager.rs  flush_strategy.rs  lambda_extension.rs  log_level.rs  logs_additional_endpoints.rs  mod.rs  object_ignore.rs  policy_provider.rs  processing_rule.rs  propagation_wrapper.rs  service_mapping.rs  trace_propagation_style.rs  yaml.rs
bottlecap/src/delegated_auth/: auth_proof.rs  client.rs  mod.rs
bottlecap/src/dogstatsd/: dogstatsd.rs
bottlecap/src/event_bus/: bus.rs  constants.rs  event_bus.rs  mod.rs
bottlecap/src/events/: mod.rs
bottlecap/src/extension/: mod.rs
bottlecap/src/extension/telemetry/: events.rs  listener.rs  mod.rs
bottlecap/src/fips/: mod.rs
bottlecap/src/flushing/: dlq.rs  handles.rs  mod.rs  service.rs
bottlecap/src/lifecycle/: flush_control.rs  invocation_context.rs  invocation_times.rs  listener.rs  mod.rs
bottlecap/src/lifecycle/invocation/: context.rs  mod.rs  processor.rs  processor_service.rs  span_inferrer.rs
bottlecap/src/logs/: agent.rs  aggregator.rs  aggregator_service.rs  constants.rs  datadog.rs  flusher.rs  mod.rs  processor.rs
bottlecap/src/logs/lambda/: mod.rs  processor.rs
bottlecap/src/lwa/: mod.rs  proxy.rs
bottlecap/src/metrics/: aggregator.rs  constants.rs  datadog.rs  dogstatsd.rs  enhanced_source.rs  errors.rs  flusher.rs  intake.rs  metric.rs  mod.rs  topology.rs
bottlecap/src/metrics/enhanced/: constants.rs  enhanced_metrics.rs  lambda.rs  metric_data.rs  mod.rs  statfs.rs  usage_metrics.rs
bottlecap/src/metrics/lambda/: mod.rs
bottlecap/src/otlp/: agent.rs  grpc_agent.rs  mod.rs  processor.rs  transform.rs
bottlecap/src/policy/: evaluator.rs  matchable.rs  mod.rs
bottlecap/src/proc/: clock.rs  constants.rs  mod.rs  proc.rs
bottlecap/src/proxy/: interceptor.rs  mod.rs  tee_body.rs
bottlecap/src/secrets/: decoder.rs  decrypt.rs  mod.rs
bottlecap/src/secrets/delegated_auth/: auth_proof.rs  client.rs  mod.rs
bottlecap/src/span_pointers/: helpers.rs  mod.rs
bottlecap/src/tags/: mod.rs  provider.rs
bottlecap/src/tags/lambda/: tags.rs
bottlecap/src/telemetry/: client.rs  events.rs  listener.rs  mod.rs
bottlecap/src/traces/: aggregator.rs  config.rs  context.rs  dedup.rs  dedup_service.rs  env_verifier.rs  hello_agent.rs  http_client.rs  http_utils.rs  hyper_client.rs  mini_agent.rs  mod.rs  my_stats_processor.rs  proxy_aggregator.rs  proxy_flusher.rs  span_dedup.rs  span_dedup_service.rs  span_pointers.rs  spanpointers.rs  startup.rs  stats_agent.rs  stats_aggregator.rs  stats_concentrator.rs  stats_concentrator_service.rs  stats_flusher.rs  stats_generator.rs  stats_processor.rs  trace_agent.rs  trace_aggregator.rs  trace_aggregator_service.rs  trace_flusher.rs  trace_processor.rs  trace_stats_processor.rs  trace_utils.rs
bottlecap/src/traces/data_streams/: aggregator.rs  checkpoint.rs  context.rs  mod.rs  pathway.rs  processor.rs  propagation_hash.rs  sketch.rs
bottlecap/src/traces/propagation/: carrier.rs  datadog_extraction.rs  datadog_propagation.rs  error.rs  mod.rs  text_map_extraction.rs  text_map_propagation.rs  text_map_propagator.rs  traceparent.rs
bottlecap/tests/: apm_integration_test.rs  appsec_processor_test.rs  logs_integration_test.rs  metrics_integration_test.rs  service_naming_test.rs
bottlecap/tests/appsec/: test-ruleset.json
bottlecap/tests/common/: fake_intake.rs  mod.rs
bottlecap/tests/payloads/: api_gateway_http_event.appsec_event.json  api_gateway_http_event.json  api_gateway_http_event_appsec.json  api_gateway_proxy_event.appsec_event.json  api_gateway_proxy_event.json  api_gateway_rest_event_parameterized.json  api_gateway_websocket_disconnect_event.json  application-load-balancer-multivalue-headers.json  application_load_balancer.json  dynamodb_event.json  event_bridge_span.json  eventbridge_event.json  eventbridge_no_resource_name_event.json  eventbridge_no_timestamp_event.json  eventbridge_sns_event.json  eventbridge_span.json  eventbridge_sqs_event.json  kinesis_event.json  msk_event.json  msk_event_with_headers.json  s3_event.json  sns_event.json  sns_event_binary.json  sns_sqs_binary_event.json  sns_sqs_event.json  sqs_event.json  step_function_lambda_root_event.json  step_function_lambda_root_legacy_event.json  step_function_nested_event.json  step_function_nested_legacy_event.json
build-tools/: Cargo.toml  Dockerfile  build.sh  to_remove
build-tools/src/: main.rs  security.rs
build-tools/src/commands/: assume_role_command.rs  auth_command.rs  build_command.rs  check_layer_consistency_command.rs  common.rs  deploy_command.rs  deploy_function_command.rs  download_signed_command.rs  invoke_function_command.rs  list_region_command.rs  mod.rs  sign_command.rs
integration_tests/recorder/: Cargo.toml
integration_tests/recorder/src/: lib.rs  listener.rs  logger.rs
tests/: other  (+2 more)
(+487 files in other folders)
