[package]
name = "bottlecap"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { version = "1.0", default-features = false }
async-trait = { version = "0.1", default-features = false }
bytes = { version = "1.2", default-features = false }
chrono = { version = "0.4", features = ["serde", "std", "now"], default-features = false }
cookie = { version = "0.18", default-features = false }
figment = { version = "0.10", default-features = false, features = ["yaml", "env"] }
fnv = { version = "1.0", default-features = false }
hyper = { version = "1.6", default-features = false, features = ["server"] }
hyper-util = { version = "0.1.16", features = ["http1", "client", "client-legacy"] }
http-body = { version = "1", default-features = false }
http-body-util = { version = "0.1", default-features = false }
itertools = { version = "0.14", default-features = false, features = ["use_std"] }
lazy_static = { version = "1.5", default-features = false }
log = { version = "0.4", default-features = false }
mime = { version = "0.3", default-features = false }
multipart = { version = "0.18", default-features = false, features = ["server"] }
nix = { version = "0.26", default-features = false, features = ["feature", "fs"] }
ordered_hash_map = { version = "0.4", default-features = false }
regex = { version = "1.10", default-features = false }
reqwest = { version = "0.12.11", features = ["json", "http2"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
thiserror = { version = "1.0", default-features = false }
tokio = { version = "1.47", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-core = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "registry", "fmt", "env-filter", "tracing-log"] }
hmac = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false, features = ["std"] }
base64 = { version = "0.22", default-features = false }
rustls = { version = "0.23.18", default-features = false, features = ["aws-lc-rs"] }
rand = { version = "0.8", default-features = false }
prost = { version = "0.13", default-features = false }
zstd = { version = "0.13.3", default-features = false }
futures = { version = "0.3.31", default-features = false }
serde-aux = { version = "4.7", default-features = false }
serde_html_form = { version = "0.2", default-features = false }
opentelemetry-proto = { version = "0.29", features = ["trace", "with-serde", "gen-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30", features = ["semconv_experimental"] }
rustls-native-certs = { version = "0.8.1", optional = true }
axum = { version = "0.8.4", default-features = false, features = ["default"] }
ustr = { version = "1.0.0", default-features = false }
# If you are adding or updating a datadog-owned code dependency, please ensure
# that it has a clippy.toml rule for disallowing the reqwest::Client::builder
# method in favor of our
# datadog_fips::reqwest_adapter::create_reqwest_client_builder. An example can
# be found in the clippy.toml file adjacent to this Cargo.toml.
datadog-protos = { version = "0.1.0", default-features = false, git = "https://github.com/DataDog/saluki/", rev = "c89b58e5784b985819baf11f13f7d35876741222"}
ddsketch-agent = { version = "0.1.0", default-features = false, git = "https://github.com/DataDog/saluki/" }
ddcommon = { git = "https://github.com/DataDog/libdatadog", rev = "9405db9cb4ef733f3954c3ee77ce71a502e98e50" }
datadog-trace-protobuf = { git = "https://github.com/DataDog/libdatadog", rev = "9405db9cb4ef733f3954c3ee77ce71a502e98e50"  }
datadog-trace-utils = { git = "https://github.com/DataDog/libdatadog", rev = "9405db9cb4ef733f3954c3ee77ce71a502e98e50" , features = ["mini_agent"] }
datadog-trace-normalization = { git = "https://github.com/DataDog/libdatadog",  rev = "9405db9cb4ef733f3954c3ee77ce71a502e98e50" }
datadog-trace-obfuscation = { git = "https://github.com/DataDog/libdatadog", rev = "9405db9cb4ef733f3954c3ee77ce71a502e98e50"  }
dogstatsd = { git = "https://github.com/DataDog/serverless-components", rev = "b0b0cb9310d8d8f2038c00a46e3267e21dc3e287", default-features = false }
datadog-fips = { git = "https://github.com/DataDog/serverless-components", rev = "fa1d2f4ea2c4c2596144a1f362935e56cf0cb3c7", default-features = false }
libddwaf = { version = "1.26.0", git = "https://github.com/DataDog/libddwaf-rust", rev = "1d57bf0ca49782723e556ba327ee7f378978aaa7", default-features = false, features = ["serde", "dynamic"] }

[dev-dependencies]
figment = { version = "0.10", default-features = false, features = ["yaml", "env", "test"] }
proptest = "1.4"
httpmock = "0.7"
mock_instant = "0.6"
serial_test = "3.1"
tempfile = "3.20"

[build-dependencies]
# No external dependencies needed for the build script

[[bin]]
name = "bottlecap"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[profile.release-alpine-arm64-fips]
inherits = "release"
# Unfortunately opt-level "z" does not work for building aws-lc-fips-sys on
# Alpine for ARM with FIPS enabled.
opt-level = 3

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[features]
default = ["reqwest/rustls-tls", "dogstatsd/default", "datadog-fips/default" ]
fips = [
    "ddcommon/fips",
    "datadog-trace-utils/fips",
    "dogstatsd/fips",
    "datadog-fips/fips",
    "libddwaf/fips",
    "reqwest/rustls-tls-native-roots-no-provider",
    "rustls/fips",
    "rustls-native-certs",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage,coverage_nightly)'] }
