[package]
name = "build_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
aws-config = "0.53.0"
aws-sdk-ec2 = "0.23.0"
aws-sdk-lambda = "0.23.0"
aws-sdk-s3 = "0.23.0"
aws-sdk-signer = "0.23.0"
aws-sdk-sts = "0.23.0"
rand = "0.8.5"
structopt = "0.3.26"
tokio = { version = "1", features = ["full"] }
