[package]
name = "build_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-config = "1.19.0"
aws-sdk-ec2 = "1.30.0"
aws-sdk-lambda = "1.18.0"
aws-sdk-s3 = "1.21.0"
aws-sdk-signer = "1.18.0"
aws-sdk-sts = "1.18.0"
clap = { version = "4.5.4", features = ["derive"] }
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json", "blocking","native-tls-vendored"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
